[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/GlobalUI/CharacterSheet/Display/DisplayContainerCatagory.gd" type="Script" id=1]

[node name="Catagory" type="PanelContainer"]
margin_right = 392.0
margin_bottom = 42.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 385.0
margin_bottom = 35.0

[node name="Header" type="MarginContainer" parent="VBoxContainer"]
margin_right = 378.0
margin_bottom = 20.0

[node name="Panel" type="Panel" parent="VBoxContainer/Header"]
margin_right = 378.0
margin_bottom = 20.0

[node name="ToggleButton" type="Button" parent="VBoxContainer/Header"]
margin_left = 358.0
margin_right = 378.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 10, 10 )
size_flags_horizontal = 8
toggle_mode = true
text = ">"

[node name="CatagoryLabel" type="Label" parent="VBoxContainer/Header"]
margin_top = 3.0
margin_right = 378.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "GOOD SHIT"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 378.0
margin_bottom = 28.0

[node name="Features" type="PanelContainer" parent="VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 378.0
margin_bottom = 38.0

[node name="FeatureContainer" type="VBoxContainer" parent="VBoxContainer/Features"]
margin_left = 7.0
margin_top = 7.0
margin_right = 371.0
margin_bottom = 7.0
